Fixed status box floating over elements invisibly

--- a/ember-profiler/app/styles/status.scss
+++ b/ember-profiler/app/styles/status.scss
@@ -6,7 +6,7 @@ div.statusMessages {
   width: 100%;
   z-index: 9999;
   overflow-y: visible;
-  padding-top: 105px;
+  padding-top: 0px;
 }
 
 div.statusMessages:empty {
